// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Agreement Popup renders correctly checkbox 1`] = `
<div
  class="px-4"
>
  <a
    class="ml-0 mb-4"
  >
     Back 
  </a>
   
  <p>
    <br />
  </p>
   
  <p
    class="h5 text-center mt-4 mb-5 text-center font-weight-light"
  >
       Intro Text
  </p>
   
  <p
    class="h5 text-center mb-3"
  >
     Main TExt 
  </p>
   
  <fieldset
    class="form-group"
  >
    <!---->
    <div
      role="group"
      tabindex="-1"
    >
      <!---->
       
      <div
        class="ml-5"
        role="group"
        tabindex="-1"
      >
        <div
          class="custom-control custom-checkbox"
        >
          <input
            autocomplete="off"
            class="custom-control-input"
            type="checkbox"
            value="Option 1"
          />
          <label
            class="custom-control-label"
          >
            <span>
              Option 1
            </span>
          </label>
        </div>
        <div
          class="custom-control custom-checkbox"
        >
          <input
            autocomplete="off"
            class="custom-control-input"
            type="checkbox"
            value="Option 2"
          />
          <label
            class="custom-control-label"
          >
            <span>
              Option 2
            </span>
          </label>
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
  </fieldset>
   
  <div
    class="d-flex justify-content-center"
  >
    <button
      class="btn px-5 btn-secondary btn-lg"
      type="button"
    >
      
            Secondary Text
        
    </button>
     
    <button
      class="btn btn-primary btn-lg disabled px-5 ml-2"
      disabled="disabled"
      type="button"
    >
      
            Primary Text
        
    </button>
  </div>
   
  <br />
   
  <p
    class="d-block text-center w-100 text-center mt-4 mb-3 font-italic"
  >
     Info Text 
  </p>
   
  <a
    class="d-block text-center mb-3"
    href="www.linklocation.com"
  >
     Link Text 
  </a>
</div>
`;

exports[`Agreement Popup renders correctly textarea 1`] = `
<div
  class="px-4"
>
  <a
    class="ml-0 mb-4"
  >
     Back 
  </a>
   
  <p>
    <br />
  </p>
   
  <p
    class="h5 text-center mt-4 mb-5 text-center font-weight-light"
  >
       Intro Text
  </p>
   
  <p
    class="h5 text-center mb-3"
  >
     Main TExt 
  </p>
   
  <fieldset
    class="form-group"
  >
    <!---->
    <div
      role="group"
      tabindex="-1"
    >
      <input
        class="text-center mb-3 border-0 form-control"
        placeholder="Dawg Daze Event"
        type="text"
      />
       
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </fieldset>
   
  <div
    class="d-flex justify-content-center"
  >
    <button
      class="btn px-5 btn-secondary btn-lg"
      type="button"
    >
      
            Secondary Text
        
    </button>
     
    <button
      class="btn btn-primary btn-lg disabled px-5 ml-2"
      disabled="disabled"
      type="button"
    >
      
            Primary Text
        
    </button>
  </div>
   
  <br />
   
  <p
    class="d-block text-center w-100 text-center mt-4 mb-3 font-italic"
  >
     Info Text 
  </p>
   
  <a
    class="d-block text-center mb-3"
    href="www.linklocation.com"
  >
     Link Text 
  </a>
</div>
`;
